fixed spacing issues on multiple pages

--- a/css.css
+++ b/css.css
@@ -83,7 +83,7 @@ h1{
     display: block;
     float: left;
     font-size: 2em;
-    padding: 3px 20px;
+    padding: 0px 20px;
     text-decoration: none;
   }
   /* menu */
